--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="College"
+                    android:onClick="clickButtons"
                     android:inputType="textCapWords"
                     android:textColor="@color/primary_text_color"
                     android:textColorHint="@color/secondary_text_color"
@@ -57,6 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Name"
+                    android:onClick="clickButtons"
                     android:inputType="textCapSentences"
                     android:textColor="@color/primary_text_color"
                     android:textColorHint="@color/secondary_text_color"
@@ -80,6 +82,7 @@
 
                     android:focusableInTouchMode="true"
                     android:hint="@string/edit_text_hint_date"
+                    android:onClick="clickButtons"
                     android:inputType="text"
                     android:textColor="@color/primary_text_color"
                     android:textColorHint="@color/secondary_text_color"
@@ -101,6 +104,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Branch"
+                    android:onClick="clickButtons"
                     android:inputType="text"
                     android:textColor="@color/primary_text_color"
                     android:textColorHint="@color/secondary_text_color"
@@ -122,6 +126,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Subject"
                     android:inputType="text"
+                    android:onClick="clickButtons"
                     android:textColor="@color/primary_text_color"
                     android:textColorHint="@color/secondary_text_color"
                     android:textSize="@dimen/edit_text_text_size" />
@@ -141,6 +146,7 @@
                     android:layout_height="wrap_content"
                     android:hint="link"
                     android:inputType="text"
+                    android:onClick="clickButtons"
                     android:textColor="@color/primary_text_color"
                     android:textColorHint="@color/secondary_text_color"
                     android:textSize="@dimen/edit_text_text_size" />
